--- a/fmsb/requirements.txt
+++ b/fmsb/requirements.txt
@@ -1,3 +1,5 @@
+aldryn-bootstrap3==1.1.2
+aldryn-style==1.1.1
 cmsplugin-filer==1.1.3
 dj-database-url==0.4.1
 Django==1.8.17
@@ -5,6 +7,7 @@ django-appconf==1.0.2
 django-classy-tags==0.8.0
 django-cms==3.4.1
 django-dbbackup==3.1.3
+django-durationfield==0.5.2
 django-filer==1.2.5
 django-formtools==1.0
 django-mptt==0.8.6
@@ -19,7 +22,6 @@ djangocms-googlemap==1.0.1
 djangocms-installer==0.9.3
 djangocms-link==2.0.3
 djangocms-snippet==1.9.2
-djangocms-style==2.0.1
 djangocms-text-ckeditor==3.3.1
 djangocms-video==2.0.3
 easy-thumbnails==2.3
